[B]Retrospect v5.2.9 - Changelog - 2020-08-02[/B]

...

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Changed: Add browser fingerprint to DPlay log in (Fixes #1413)
* Fixed: Issue where Nickelodeon would break on missing images
* Fixed: Pathe.nl updated their API version